static/sass/styles.scss
@charset "UTF-8";

@import "settings";
@import "vanilla-framework/scss/build";

@import "pattern_icon";
@include lxdui-p-icon;
@include vf-p-icon-add-canvas;
@include vf-p-icon-applications;
@include vf-p-icon-canvas;
@include vf-p-icon-connected;
@include vf-p-icon-containers;
@include vf-p-icon-edit;
@include vf-p-icon-export;
@include vf-p-icon-fullscreen;
@include vf-p-icon-import;
@include vf-p-icon-machines;
@include vf-p-icon-open-terminal;
@include vf-p-icon-power-off;
@include vf-p-icon-profile;
@include vf-p-icon-switcher-environments;
@include vf-p-icon-warning-grey;
@include vf-p-icon-video-play;
@include vf-p-icon-settings;

@import "pattern_navigation";
@include lxd-ui-p-navigation;

@import "pattern_terminal";
@include pattern-terminal;

@import "font";

@import "meter";

.l-main .row {
  max-width: none;
}

.empty-state-message {
  .icon {
    height: 100%;
    width: 100%;
  }
}

.u-vertical-align-middle {
  vertical-align: middle;
}

.u-align-self-end {
  align-self: end;
}

.p-instance-yaml {
  margin-bottom: $sp-large;
  max-height: calc(100vh - 200px);
  overflow-y: scroll;
}

.p-image-select-modal > section {
  min-height: 100%;
  min-width: 1300px;
}

.p-image-list {
  max-height: calc(100vh - 200px);
  overflow-y: auto;
}

